--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
 
 <div class="nav-mobile  lg:hidden">
     <div class="topnav flex items-center justify-between">
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <a href="javascript:void(0);" class="icon nav-item" onclick="myFunction()" style="width: 30%">
             <i class="fas fa-bars"></i>
         </a>
-        <a href="#home" class="active text-center flex justify-center">
+        <a href="#home" class="active text-center flex justify-center nav-item" style="width: 30%">
             <img src="img/logo.png" alt="">
         </a>
-        <a href="#form__wrapper" class="button button-nav">Buy</a>
+        <a href="#form__wrapper" class="button button-nav nav-item flex justify-center" style="width: 30%">Buy</a>
     </div>
     <div id="myLinks"class="flex-col">
         <a href="#interiors">Interiors</a>
