--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Premium Heater - Ultra-slim Infrared Electric Heater</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,500;0,700;1,300&display=swap"
@@ -119,33 +119,36 @@
 </section>
 
 <section class="gentle">
-    <h2>Gentle heat</h2>
-    <p class="my-6">In a way, it works like the Sun: the heater's infrared rays evenly and gently heat up space and the
-        things in it,
-        keeping you warm even after you turn it off. This method is perfectly safe both for humans and pets.</p>
-    <div class="lg:hidden flex justify-between my-8">
-        <h3>Regular
-            heater</h3>
-        <h3 class="text-right">Regular
-            heater</h3>
-    </div>
-    <div class="gentle-change-line flex justify-center lg:justify-between">
-        <div class="regular-heater hidden lg:block w-1/4">
+    <div class="gentlee">
+        <h2>Gentle heat</h2>
+        <p class="my-6">In a way, it works like the Sun: the heater's infrared rays evenly and gently heat up space and
+            the
+            things in it,
+            keeping you warm even after you turn it off. This method is perfectly safe both for humans and pets.</p>
+        <div class="lg:hidden flex justify-between my-8">
             <h3>Regular
                 heater</h3>
-            <p>heats and dries out air, warm air wents upside leaving a floor cold</p>
-        </div>
-        <div class="gentle-img text-center lg:mx-8" style="position: relative">
-            <!--            <img src="img/Group%2057.png" alt="" class="w-full">-->
-            <div id="example">
-                <img data-caption="Before" src="img/image%2015.png" alt="image One">
-                <img data-caption="After" src="img/image%2017.png" alt="image Two">
-            </div>
-        </div>
-        <div class="premium-heater text-right hidden lg:block w-1/4">
-            <h3>Premium
+            <h3 class="text-right">Regular
                 heater</h3>
-            <p>doesn't dry out air, evenly warms all objects in the room, including floor and walls</p>
+        </div>
+        <div class="gentle-change-line flex justify-center lg:justify-between">
+            <div class="regular-heater hidden lg:block w-1/4">
+                <h3>Regular
+                    heater</h3>
+                <p>heats and dries out air, warm air wents upside leaving a floor cold</p>
+            </div>
+            <div class="gentle-img text-center lg:mx-8" style="position: relative">
+                <!--            <img src="img/Group%2057.png" alt="" class="w-full">-->
+                <div id="example">
+                    <img data-caption="Before" src="img/image%2015.png" alt="image One">
+                    <img data-caption="After" src="img/image%2017.png" alt="image Two">
+                </div>
+            </div>
+            <div class="premium-heater text-right hidden lg:block w-1/4">
+                <h3>Premium
+                    heater</h3>
+                <p>doesn't dry out air, evenly warms all objects in the room, including floor and walls</p>
+            </div>
         </div>
     </div>
 </section>
@@ -175,44 +178,46 @@
 </section>
 
 <section class="specifications" id="specifications">
-    <div class="features m-auto w-4/5 flex flex-col lg:flex-row justify-between">
-        <div class="feature__item mb-6 lg:mb-0 lg:mx-2">
-            <div class="flex flex-col">
-                <img src="img/eu%201.png" alt="">
-                <h3>Water resistant</h3>
-                <p>With an IP44 level of security you can safely use it in your bathroom.</p>
+    <div class="specificationss">
+        <div class="features m-auto  flex flex-col lg:flex-row justify-between">
+            <div class="feature__item mb-6 lg:mb-0 lg:mx-2">
+                <div class="flex flex-col">
+                    <img src="img/eu%201.png" alt="" class="hidden lg:block large">
+                    <img src="img/Group%2042.png" alt="" class="lg:hidden mobile">
+                    <h3>Water resistant</h3>
+                    <p>With an IP44 level of security you can safely use it in your bathroom.</p>
+                </div>
             </div>
-        </div>
-        <div class="feature__item my-6 lg:my-0 lg:mx-2">
-            <div class="flex flex-col">
-                <img src="img/eu%201.png" alt="">
-                <h3>Made in EU</h3>
-                <p>Our factory is located in Poland and we use high-quality materials only.</p>
-            </div>
-        </div>
-        <div class="feature__item my-6 lg:my-0 lg:mx-2">
-            <div class="flex flex-col">
-                <img src="img/Group%2018.png" alt="">
-                <h3>Ultra-slim glass panel</h3>
-                <p>Premium Heater consists of two glass panels, 0,8 cm thick in total.</p>
-            </div>
-        </div>
-    </div>
+            <div class="feature__item my-6 lg:my-0 lg:mx-2">
+                <div class="flex flex-col">
+                    <img src="img/eu%201.png" alt="" class="hidden lg:block large">
+                    <img src="img/eu%201%20(2).png" alt="" class="lg:hidden mobile">
 
-    <div class="specifications-content">
-        <h4>Specifications</h4>
-        <div class="specifications-content__table m-auto w-4/5">
-            <div class="flex justify-between">
-                <p>Heating area</p>
-                <p>15 m2</p>
+                    <h3>Made in EU</h3>
+                    <p>Our factory is located in Poland and we use high-quality materials only.</p>
+                </div>
             </div>
-            <div class="flex justify-between">
-                <p>Heating area</p>
-                <p>15 m2</p>
+            <div class="feature__item my-6 lg:my-0 lg:mx-2">
+                <div class="flex flex-col">
+                    <img src="img/Group%2018.png" alt="" class="hidden lg:block large">
+                    <img src="img/Group%2018%20(2).png" alt="" class="lg:hidden mobile">
+                    <h3>Ultra-slim glass panel</h3>
+                    <p>Premium Heater consists of two glass panels, 0,8 cm thick in total.</p>
+                </div>
             </div>
-            <div class="flex justify-between">
-                <p>Heating area</p>
-                <p>15 m2</p>
+        </div>
+
+        <div class="specifications-content">
+            <h4>Specifications</h4>
+            <div class="specifications-content__table">
+                <ul class="leaders">
+                    <li><span>Heating area</span> <span>15 m2</span></li>
+                    <li><span>Power consumption</span> <span>500W</span></li>
+                    <li><span>Total weight</span> <span>6 kg</span></li>
+                    <li><span>Warranty</span> <span>2 years</span></li>
+                    <li><span>Chort length</span> <span>1, 5m</span></li>
+                    <li><span>Dimensions</span> <span>100 x 36,5 x 0,8 cm</span></li>
+                </ul>
             </div>
         </div>
     </div>
@@ -808,7 +813,7 @@
     </div>
     <div class="links flex justify-around lg:justify-between w-full lg:w-2/5 mt-4 lg:m-0">
         <a href="#" class="">Terms of use</a>
-        <a href="#" class="">Privacy Policy</a>
+        <a href="privacy.html" class="">Privacy Policy</a>
     </div>
 </footer>
 
