--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="lg:hidden flex justify-between my-8">
             <h3>Regular
                 heater</h3>
-            <h3 class="text-right">Regular
+            <h3 class="text-right">Premium
                 heater</h3>
         </div>
         <div class="gentle-change-line flex justify-center lg:justify-between">
