--- a/terms.html
+++ b/terms.html
@@ -45,7 +45,6 @@
 </div>
 
 
-
 <header class="header ">
     <div class="headerr flex flex-col lg:flex-row">
         <div class="header-content w-full lg:w-3/5">
@@ -56,7 +55,8 @@
                 efficiently. Suitable for any space, including bathrooms, Premium Heater does only what it was made to
                 do.
             </p>
-            <a href="#/form__wrapper" class="hidden lg:inline-block border-2 rounded-full border-white py-4 px-24 my-16">
+            <a href="#/form__wrapper"
+               class="hidden lg:inline-block border-2 rounded-full border-white py-4 px-24 my-16">
                 Get it now!
             </a>
             <a href="#/form__wrapper" class="lg:hidden button w-full text-center mt-6">Get it now!</a>
@@ -177,10 +177,6 @@
             x.style.display = "flex";
         }
     }
-
-    document.querySelectorAll('.my-link').click(function () {
-        myFunction();
-    })
 </script>
 </body>
 </html>
